--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/images/pexels-elina-araja-face.jpg":["assets/images/pexels-elina-araja-face.jpg"],"assets/images/pexels-javierbalseiro-street.jpg":["assets/images/pexels-javierbalseiro-street.jpg"]}
